--- a/src/styles/utilits/variables.scss
+++ b/src/styles/utilits/variables.scss
@@ -1,4 +1,4 @@
-$days: mon, tue, wed, thu, fri, sat, sun;
+$week: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
 $cell-width: 100px;
 $cell-heigth: 100px;
 $gap-between-cells: 1px;
