--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -2,3 +2,11 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
 }
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
