--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,59 @@
+@import 'utiles';
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+  height: 100vh;
+}
+
+.calendar {
+  box-sizing: border-box;
+  display: flex;
+  margin: 0 auto;
+  max-width: $containerSize;
+  padding: $padding;
+  gap: $gap;
+  flex-wrap: wrap;
+
+  @for $lastDay from 28 through 31 {
+    &.calendar--month-length-#{$lastDay} :nth-child(-n + #{$lastDay}) {
+      display: flex;
+    }
+  }
+
+  @each $day, $margin in $startDays {
+    &.calendar--start-day-#{$day} :first-child {
+      margin-left: #{$margin};
+    }
+  }
+}
+
+.calendar__day {
+  box-sizing: border-box;
+  display: none;
+  justify-content: center;
+  align-items: center;
+
+  width: $boxSize;
+  height: $boxSize;
+  background-color: #eee;
+  border: 1px solid black;
+
+  transition: all 0.5s;
+
+  &:hover {
+    cursor: pointer;
+    background-color: #ffbfcb;
+    transform: translateY(-20px);
+  }
+
+  @for $num from 1 through 31 {
+    &:nth-child(#{$num})::before {
+      content: '#{$num}';
+    }
+  }
 }
