--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 .calendar {
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   width: calc(7 * ($box-day-size) + 6 * ($gap-box-day) + 2 * ($padding-box));
@@ -6,6 +7,7 @@
   padding: $padding-box;
 
   &__day {
+    box-sizing: border-box;
     width: $box-day-size;
     height: $box-day-size;
     display: flex;
@@ -53,4 +55,3 @@
     }
   }
 }
-
