--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,18 @@
 @import 'variables';
+@import 'common';
 
 .calendar {
+  margin: auto;
   display: flex;
   flex-wrap: wrap;
   padding: $padding;
   gap: $gap;
   width: $calendar-width;
-  height: auto; 
+  height: auto;
 
   &__day {
     width: $block-size;
+    box-sizing: border-box;
     height: $block-size;
     background-color: $block-color;
     border: $block-border;
