add new solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,7 +53,7 @@ body {
 }
 
 @each $name, $startPosition in $day-of-week {
-  .calendar__start-day--#{$name} {
+  .calendar--start-day-#{$name} {
     .calendar__day:first-child {
       margin-left: ($cell-size * ($startPosition - 1)) + ($startPosition - 1);
     }
@@ -61,7 +61,7 @@ body {
 }
 
 @for $i from 28 through $days {
-  .calendar__month-length--#{$i} {
+  .calendar--month-length-#{$i} {
     .calendar__day:nth-child(n + #{$i + 1}) {
       display: none;
     }
