--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,80 @@
-body {
+$day-size: 100px;
+$gap-size: 1px;
+$paddings: 10px;
+$colums: 7;
+$number-font-size: 30px;
+$number-font-family: Arial;
+$day-color: #eee;
+$border-color: #000;
+$hover-color: #ffbfcb;
+$animation-duration: 0.5s;
+$calendar-width: calc((($day-size * $colums) + (2 * $paddings)) + $gap-size * 6);
+$week: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  font-size: $number-font-size;
+  font-family: $number-font-family;
+}
+
+.calendar {
+  width: $calendar-width;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-size;
+  padding-inline: 10px;
+
+  &__day {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    height: $day-size;
+    width: $day-size;
+    color: $border-color;
+    background-color: $day-color;
+    border: $border-color 1px solid;
+    transition: all $animation-duration;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}):before {
+        content: '#{$i}';
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: $hover-color;
+      transform: translateY(-20px);
+    }
+
+    &:nth-child(7n + 1) {
+      margin-left: 0;
+    }
+  }
+}
+
+@each $day, $num in $week {
+  .calendar--start-day-#{$day} :first-child {
+    margin-left: ($day-size + $gap-size) * $num;
+  }
+}
+
+@for $i from 28 through 31 {
+  .calendar--month-length-#{$i} {
+    .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
