--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,73 +1,50 @@
-$day-size: 100px;
-$gap-size: 1px;
-$paddings: 10px;
-$colums: 7;
-$number-font-size: 30px;
-$number-font-family: Arial;
-$day-color: #eee;
-$border-color: #000;
-$hover-color: #ffbfcb;
-$animation-duration: 0.5s;
-$calendar-width: calc((($day-size * $colums) + (2 * $paddings)) + $gap-size * 6);
-$week: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
-
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   margin: 0;
+  height: 100vh;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   font-size: $number-font-size;
   font-family: $number-font-family;
 }
 
-.calendar {
-  width: $calendar-width;
+.calendar__day {
   display: flex;
-  flex-wrap: wrap;
-  gap: $gap-size;
-  padding-inline: 10px;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  height: $day-size;
+  width: $day-size;
+  color: $border-color;
+  background-color: $day-color;
+  border: $border-color 1px solid;
+  transition: all $animation-duration;
 
-  &__day {
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    height: $day-size;
-    width: $day-size;
-    color: $border-color;
-    background-color: $day-color;
-    border: $border-color 1px solid;
-    transition: all $animation-duration;
-
-    @for $i from 1 through 31 {
-      &:nth-child(#{$i}):before {
-        content: '#{$i}';
-      }
+  @for $i from 1 through 31 {
+    &:nth-child(#{$i}):before {
+      content: '#{$i}';
     }
+  }
 
-    &:hover {
-      cursor: pointer;
-      background-color: $hover-color;
-      transform: translateY(-20px);
-    }
+  &:hover {
+    cursor: pointer;
+    background-color: $hover-color;
+    transform: translateY(-20px);
+  }
 
-    &:nth-child(7n + 1) {
-      margin-left: 0;
-    }
+  &:nth-child(7n + 1) {
+    margin-left: 0;
   }
 }
 
 @each $day, $num in $week {
   .calendar--start-day-#{$day} :first-child {
-    margin-left: ($day-size + $gap-size) * $num;
+    margin-left: (($day-size * ($num - 1)) + ($num - 1));
   }
 }
 
