--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,6 @@
 $cell-size: 100px;
 $gap: 1px;
-
-// mon '0' stay here, because StyleLint want
-// single space after ':', but when i save a
-// file, this space is removed
-
-$days:
-  'mon' 0,
+$days: 'mon' 0,
   'tue' 1,
   'wed' 2,
   'thu' 3,
