--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,59 @@
+@import './utils/mixins';
+@import './utils/variables';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+
+  @include centered-content;
+}
+
+.calendar {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  padding: $paddingCalendar;
+  width: $paddingCalendar * 2 + 7 * $boxSideSize + 6 * $gap;
+
+  @each $day, $i in $daysOfWeek {
+    &--start-day-#{$day} :first-child {
+      margin-left: ($boxSideSize + $gap) * $i;
+    }
+  }
+
+  @for $date from 28 through 31 {
+    &--month-length-#{$date} :nth-child(n + #{$date + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+    width: $boxSideSize;
+    height: $boxSideSize;
+    border: 1px solid black;
+    background-color: #eee;
+    transition: 0.5s;
+
+    @include centered-content;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
 }
