add task solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,21 +1,18 @@
-
 .calendar {
   display: flex;
   text-align: center;
   flex-wrap: wrap;
 
-
   gap: $gap;
   width: $width;
   padding: 0 $padding 0;
 
-
   &_day {
     display: flex;
+    box-sizing: border-box;
     height: 100px;
     width: 100px;
 
-    justify-items: center;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -28,9 +25,7 @@
 
   & :hover {
     cursor: pointer;
-    background-color: #FFBFCB;
+    background-color: #ffbfcb;
     transform: translateY(-20px);
   }
 }
-
-
