--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -1,9 +1,9 @@
 * {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
 html {
-  box-sizing: border-box;
   font-size: 30px;
 }
 
