--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 $base-color: #eee;
 $gap: 1px;
 $padding: 10px;
-$column-width:100px;
+$column-width: 100px;
 $width: 7 * $column-width + $gap * 6 + $padding * 2;
 $weekdays: (
   'mon': 0,
@@ -10,6 +10,5 @@ $weekdays: (
   'thu': 3,
   'fri': 4,
   'sat': 5,
-  'sun': 6
+  'sun': 6,
 );
-
