--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,9 @@
+@import 'main';
+
 body {
-  margin: 0;
+  margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
