--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,11 +4,20 @@ $fontSize: 30px;
 $paddings: 10px;
 $marginStartDay: $fieldSide + $fieldGap;
 $globalWidth: ($fieldSide * 7) + ($fieldGap * 6);
+$days-of-week: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
+$month-length: (28, 29, 30, 31);
 
 @mixin day-field-style {
   height: $fieldSide;
   width: $fieldSide;
-  background-color: #eee;
   font-family: Arial, Helvetica, sans-serif;
   font-size: $fontSize;
   display: flex;
@@ -35,7 +44,10 @@ body {
   flex-wrap: wrap;
 
   &__day {
-    transition: transform 0.5s;
+    background-color: #eee;
+    transition:
+      transform 0.5s,
+      background-color 0.5s;
     &:hover {
       cursor: pointer;
       background-color: #ffbfcb;
@@ -43,71 +55,27 @@ body {
     }
   }
 
-  &--month-length--28 {
-    @for $i from 1 through 28 {
-      .calendar__day {
-        &:nth-child(#{$i})::before {
-          @include day-field-style;
+  &--month-length {
+    @each $days in $month-length {
+      &-#{$days} {
+        @for $i from 1 through $days {
+          .calendar__day {
+            &:nth-child(#{$i})::before {
+              @include day-field-style;
 
-          content: '#{$i}';
-        }
-      }
-    }
-  }
-  &--month-length--29 {
-    @for $i from 1 through 29 {
-      .calendar__day {
-        &:nth-child(#{$i})::before {
-          @include day-field-style;
-
-          content: '#{$i}';
-        }
-      }
-    }
-  }
-
-  &--month-length--30 {
-    @for $i from 1 through 30 {
-      .calendar__day {
-        &:nth-child(#{$i})::before {
-          @include day-field-style;
-
-          content: '#{$i}';
-        }
-      }
-    }
-  }
-
-  &--month-length--31 {
-    @for $i from 1 through 31 {
-      .calendar__day {
-        &:nth-child(#{$i})::before {
-          @include day-field-style;
-
-          content: '#{$i}';
+              content: '#{$i}';
+            }
+          }
         }
       }
     }
   }
 
   &--start-day {
-    &-tue :first-child {
-      margin-left: $marginStartDay;
-    }
-    &-wed :first-child {
-      margin-left: $marginStartDay * 2;
-    }
-    &-thu :first-child {
-      margin-left: $marginStartDay * 3;
-    }
-    &-fri :first-child {
-      margin-left: $marginStartDay * 4;
-    }
-    &-sat :first-child {
-      margin-left: $marginStartDay * 5;
-    }
-    &-sun :first-child {
-      margin-left: $marginStartDay * 6;
+    @each $day, $index in $days-of-week {
+      &-#{$day} :first-child {
+        margin-left: $marginStartDay * $index;
+      }
     }
   }
 }
