--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,7 @@
-$box-size: 100px;
-$bg-color: #eee;
-$bg-color-hover: #ffbfcb;
-$columns: 7;
-$days-gap: 1px;
-$number: 31;
-$days: (
-  'mon': 0,
-  'tue': 1,
-  'wed': 2,
-  'thu': 3,
-  'fri': 4,
-  'sat': 5,
-  'sun': 6,
-);
+$padding-calendar: 10px;
+$side-cell: 100px;
+$gap-calendar: 1px;
+$max-row: 7;
+$color-cell: #eee;
+$color-hover: #ffbfcb;
+$first-day: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
