--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,6 +62,11 @@ body {
             $i: $i + 1;
           }
         }
+        &:hover {
+          cursor: pointer;
+          background-color: #ffbfcb;
+          transform: translateY(-20px);
+        }
       }
     }
   }
