--- a/src/styles/blocks/style.scss
+++ b/src/styles/blocks/style.scss
@@ -25,15 +25,18 @@
 
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
-  margin: auto;
   padding: $calendar-padding;
-  max-width: calc(($day-size * 7) + ($gap * 6) + ($border-width * 14));
+  max-width: calc(($day-size * 7) + ($gap * 6));
 
   &__day {
     width: $day-size;
