--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -4,6 +4,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  font-family: $font-family;
+  font-size: $f-s;
+  color: $num-color;
 }
 
 .calendar {
@@ -45,9 +49,6 @@ body {
   @for $i from 1 through 31 {
     &:nth-child(#{$i})::before {
       content: '#{$i}';
-      font-family: Arial, sans-serif;
-      font-size: 30px;
-      color: #000;
     }
   }
 
