--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
-body {
-  margin: 0;
-}
+@import './utils/variable';
+@import './utils/normalize';
+@import './utils/mixins';
+@import './blocks/main';
