--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,4 @@
-
-@import './vars.scss';
+@import './vars';
 
 body {
   margin: 0;
@@ -46,16 +45,14 @@ body {
     }
   }
 
-  @for $day from 28 through 31 {
-    .calendar--month-length-#{$day} {
-      .calendar__day:nth-child(n + #{$day + 1}) {
-        display: none;
-      }
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
     }
   }
 
   @each $day, $index in $start-day {
-    .calendar--start-day-#{$day} {
+    &--start-day-#{$day} {
       .calendar__day:first-child {
         margin-left: ($day-size + $days-gap) * $index;
       }
