--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,19 @@
+@import './blocks/variables';
+@import './blocks/calendar';
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
 }
