--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,59 @@
 body {
   margin: 0;
 }
+
+$backgroundColor: #eee;
+$cellWidth: 100px;
+$cellHeight: 100px;
+$cellBorderStyle: 1px solid #000;
+$fontSize: 30px;
+$padding: 10px;
+$gap: 1px;
+$calendarWidth: 700px;
+$numberOfColumns: 7;
+
+* {
+  box-sizing: border-box;
+}
+
+.calendar {
+  padding: $padding;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  justify-content: center;
+  width: 700px;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $backgroundColor;
+    width: $cellWidth;
+    height: $cellHeight;
+    border: $cellBorderStyle;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: $fontSize;
+    transition:
+      background-color 0.5s,
+      transform 0.5s;
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
+
+  @for $day from 1 through 31 {
+    &__day:nth-child(#{$day})::before {
+      content: "#{$day}";
+    }
+  }
+
+  // $days: "sun", "mon", "tue", "wed", "thu", "fri", "sat";
+
+  // @each $day in $days {
+  //   &--start-day-#{$day} {
+  //   }
+  // }
+}
