--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,8 @@
 $bc-color: #eee;
 $col-counts: 31;
 $border-size: 1px;
-$days: 'mon, tue, wed, thu, fri, sat, sun';
+$cal-padding: 10px;
+$limit-columns: 7;
+$gap: 1px;
+$days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
+$cal-size: 100px;
