--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,9 @@
-$bc-color: #eee;
-$col-counts: 31;
+$background-color: #eee;
+$days-counts: 31;
 $border-size: 1px;
-$cal-padding: 10px;
-$limit-columns: 7;
+$calendar-padding: 10px;
+$limit-day-columns: 7;
 $gap: 1px;
 $days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
-$cal-size: 100px;
+$day-box-size: 100px;
+$max-width-math: $limit-day-columns * $day-box-size;
