--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -41,7 +41,8 @@
   @each $day, $column in $start-day {
     &--start-day-#{$day} {
       .calendar__day:first-child {
-        margin-left: margin-left: calc($column * $day-width + $column);
+         /* prettier-ignore */
+        margin-left: $calendar-width - (($day-width * $column) + ($column - 1) + ($date-padding * 2));
       }
     }
   }
