--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,44 +1,3 @@
-
-
-body {
-  padding-top: 80px;
-}
-
-html {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.calendar {
-  margin: auto;
-  width: 707px;
-  height: 505px;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-
-    &__day {
-      display: flex;
-      box-sizing: border-box;
-      background-color: #eee;
-      margin: 0.5px;
-      width: 100px;
-      height: 100px;
-      border: 1px solid black;
-      transition: 500ms;
-    }
-
-
-    &__day:hover {
-      cursor: pointer;
-      background-color: #FFBFCB;
-      transform: translateY(-20px);
-}
-
-    &__day:first-child {
-      @if 
-    }
-
-}
-
-
+@import './var';
+@import './main';
+@import './functions';
