--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,6 +32,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition-duration: 0.5s;
   }
 
   &__day:hover {
