--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -31,12 +31,12 @@ body {
     height: $dayHeight;
     border: 1px solid;
     background-color: #eee;
+    transition: transform 0.5s;
 
     &:hover {
       background-color: #ffbfcb;
       transform: translateY(-20px);
       cursor: pointer;
-      transition-duration: 0.5s;
     }
   }
 
