--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -31,7 +31,8 @@ body {
     height: $dayHeight;
     border: 1px solid;
     background-color: #eee;
-    transition: transform 0.5s;
+    transition-property: transform, background-color;
+    transition-duration: 0.5s;
 
     &:hover {
       background-color: #ffbfcb;
