--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -66,13 +66,13 @@ $paddingWidth: 10px;
       }
     }
 
-    @each $day, $num in $dayOfWeek {
-      &--start-day-#{$day} {
-        .calendar__day:first-child {
-          margin-left: calc($num * $dayWidth + $num);
-        }
-      }
-    }
+    // @each $day, $num in $dayOfWeek {
+    //   &--start-day-#{$day} {
+    //     .calendar__day:first-child {
+    //       margin-left: calc($num * $dayWidth + $num);
+    //     }
+    //   }
+    // }
 
     &:hover {
       cursor: pointer;
