--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
@@ -27,15 +31,29 @@ $gapWidth: 1px;
 $paddingWidth: 10px;
 
 .calendar {
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
-  width: 707px;
+  width: 726px;
   gap: $gapWidth;
   padding: $paddingWidth;
   transition:
-  transform 0.5s,
-  background-color 0.5s;
+    transform 0.5s,
+    background-color 0.5s;
+
+  @for $i from 28 through $monthLength {
+    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  @each $day, $num in $dayOfWeek {
+    &--start-day-#{$day} {
+      .calendar__day:first-child {
+        margin-left: calc($num * ($dayWidth + $gapWidth));
+      }
+    }
+  }
 
   &__day {
     box-sizing: border-box;
@@ -48,31 +66,15 @@ $paddingWidth: 10px;
     justify-content: center;
     align-items: center;
 
-    &:first-child {
-      margin-left: 606px;
-    }
+    // &:first-child {
+    //   margin-left: 606px;
+    // }
 
     @for $i from 1 through $monthLength {
-      &:nth-child(#{$i}):before {
+      &:nth-child(#{$i})::before {
         content: '#{$i}';
       }
     }
-
-    @for $i from 28 through $monthLength {
-      &--month-lenght-#{$i} {
-        &__day:nth-child(n + #{$i}) {
-          display: none;
-        }
-      }
-    }
-
-    // @each $day, $num in $dayOfWeek {
-    //   &--start-day-#{$day} {
-    //     .calendar__day:first-child {
-    //       margin-left: calc($num * $dayWidth + $num);
-    //     }
-    //   }
-    // }
 
     &:hover {
       cursor: pointer;
